# palinode

./: .dockerignore  .gitattributes  .gitignore  ADR-001-tools-over-pipeline.md  ADR-003-memory-harness-boundary.md  ADR-010-cross-surface-parity-contract.md  Dockerfile  FEATURES.md  LICENSE  PLAN.md  PRD.md  PRIVACY.md  PROGRAM.md  README.md  SECURITY.md  docker-compose.yml  llms-install.md  palinode.config.yaml.example  pyproject.toml  server.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  main-ci.yml  publish-mcp-registry.yml  publish-pypi.yml  test.yml  wheel-smoke.yml
bench/: README.md  __init__.py  corpus.py  harness.py  report.py  run.py
claude-plugin/: .mcp.json  README.md
claude-plugin/.claude-plugin/: plugin.json
deploy/docker/: entrypoint.sh
deploy/launchd/: README.md  com.phasespace.palinode-api.plist.template  com.phasespace.palinode-watcher.plist.template
deploy/systemd/: README.md  install.sh  palinode-api.service.template  palinode-embed-keepalive.service.template  palinode-embed-keepalive.timer.template  palinode-mcp.service.template  palinode-watcher.service.template
docs/: ACKNOWLEDGMENTS.md  ADR-001-tools-over-pipeline.md  CHANGELOG.md  DEPLOYMENT-GUIDE.md  DEVELOPMENT.md  DOCTOR.md  EXECUTOR-SPEC.md  FEATURE-STATUS.md  GIT-MEMORY.md  HARNESS-SMOKE.md  HOW-MEMORY-WORKS.md  INSTALL-CLAUDE-CODE.md  INSTALL-HERMES.md  INSTALL-OPENCLAW-MIGRATION.md  INSTALL-OPENCLAW.md  L4-BEHAVIORAL-TESTING-DESIGN.md  LAUNCH-CHECKLIST.md  MCP-CONFIG-HOMES.md  MCP-INSTALL-RECIPES.md  MCP-SETUP.md  MILESTONES.md  OBSIDIAN-SETUP.md  OBSIDIAN.md  OPERATIONS.md  PARITY.md  QUICKSTART.md  RELEASE-NOTES-v0.8.0.md  ROADMAP.md  TESTING-LOG.md  WHY-LOCAL-MEMORY.md  claude-code-setup.md  logging.md  ollama-degraded.md
examples/: CLAUDE.md  README.md
examples/compaction-demo/: README.md  pass-1-after-update-supersede.md
examples/decisions/: api-design.md
examples/hooks/: README.md  palinode-session-end.sh  palinode-session-start.sh  settings.json
examples/insights/: testing.md
examples/people/: alice.md
examples/projects/: my-app.md
examples/sample-memory/: README.md
nix/services/: palinode-service.nix
palinode/: __init__.py  cli.py  mcp.py
palinode/api/: _util.py  enrichment.py  memory_write.py  middleware.py  path_safety.py  rate_limit.py  search_helpers.py  server.py
palinode/api/routers/: consolidation.py  context.py  git_history.py  health.py  maintenance.py  memory.py  search.py  session.py  triggers.py
palinode/api/ui/: __init__.py  provenance.py  render.py  router.py  views.py
palinode/cli/: __init__.py  _api.py  _format.py  archive.py  archive_expired.py  consolidate.py  diff.py  doctor.py  embedding_tools.py  git.py  init.py  lint.py  list.py  list_cmd.py  manage.py  mcp_config.py  mcp_smoke.py  migrate.py  obsidian_sync.py  prime.py  prompt.py  query.py  read.py  repair_status.py  review.py  save.py  search.py  session_end.py  status.py  trace.py  trigger.py  worktree.py
palinode/consolidation/: __init__.py  archive.py  cron.py  executor.py  fact_ids.py  frontmatter.py  layer_split.py  op_parse.py  proposal.py  runner.py  status_doc.py  ttl.py  write_time.py
palinode/core/: audit.py  auth.py  brand.py  claims.py  config.py  context_prime.py  cross_refs.py  db.py  defaults.py  embedder.py  embedding_preprocess.py  entity_graph.py  git_persistence.py  git_tools.py  lint.py  llm.py  memory_paths.py  ollama_client.py  parity.py  parser.py  quote_verify.py  ranker.py  review.py  scope.py  similarity.py  store.py  summarize.py  trace.py  triggers.py  typed_links.py  visibility.py  wiki.py
palinode/diagnostics/: __init__.py  fixes.py  formatters.py  registry.py  runner.py  types.py
palinode/import_/: vault.py
palinode/indexer/: index_file.py  watcher.py
palinode/ingest/: __init__.py  pipeline.py
palinode/lint/: contradictions.py
palinode/migration/: __init__.py  frontmatter_backfill.py  mem0_classify.py  mem0_export.py  mem0_generate.py  openclaw.py  run_mem0_backfill.py
plugin/: INSTALL.md  index.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
plugin/test/: injection-role.test.ts  parity.test.ts  recall-profile.test.ts
plugin/types/: openclaw.d.ts
scripts/: check-shipping-leaks.sh  scrub-check.sh  setup-worktree.sh  sync-inbox.sh
skill/palinode-claude-code/: SKILL.md
skill/palinode-memory/: SKILL.md
skill/palinode-session/: SKILL.md
skill/references/: claude-skills-guide.md  nate-skills-substack-article.md
specs/prompts/: compaction.md  consolidation.md  context-assembly.md  digest.md  extraction.md  ingestion.md  nightly-consolidation.md  update.md
systemd/: palinode-api.service  palinode-watcher.service
tests/: conftest.py  test_api_bearer_auth.py  test_api_middleware.py  test_api_rate_limit.py  test_api_route_inventory.py  test_archive_on_demand_664.py  test_archive_recall_485.py  test_audit.py  test_auto_summary_async.py  test_bench_harness.py  test_body_size_limit.py  test_chat_fallback.py  test_claims_508.py  test_cli_init.py  test_cli_mcp_smoke.py  test_cold_save_fast_return.py  test_collection_integrity.py  test_config_env_parse_logging.py  test_config_validation.py  test_config_view.py  test_consolidation_dry_run.py  test_consolidation_status_write_path.py  test_consolidation_yaml_parse_warning.py  test_content_hash_and_confidence.py  test_context.py  test_context_prime.py  test_context_prime_262.py  test_created_at_preservation.py  test_cross_refs.py  test_daily_penalty.py  test_db_disambiguation.py  test_demand_decay_importance.py  test_deploy_systemd.py  test_description.py  test_description_graceful_degrade.py  test_diagnostics_skeleton.py  test_docker_compose.py  test_docs_schema_alignment.py  test_doctor_api.py  test_doctor_config_drift.py  (+111 more)
tests/fixtures/: api_route_inventory.json  claude_md_memory_block_heavy.txt  claude_md_memory_block_light.txt  mcp_schema_semantics.json
tests/integration/: _smoke_args.py  test_api_roundtrip.py  test_mcp_e2e.py  test_mcp_stdio.py  test_obsidian_demo.py
tests/live/: test_live_instance.py
(+28 files in other folders)
