[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "palinode"
version = "0.9.1"
description = "The memory substrate for AI agents and developer tools. Git-versioned, file-native, MCP-first."
authors = [
  {name = "Paul Kyle", email = "paul@phasespace.co"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["ai", "agents", "memory", "mcp", "llm", "rag", "knowledge-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Lower bounds set to versions that exclude all known CVEs against these packages
    # as of 2026-04-30. See PR description for CVE-to-version mapping.
    "sqlite-vec>=0.1.6",          # CVE-2024-46488 fixed in 0.1.6
    "watchdog>=4.0",
    "pyyaml>=6.0,<7.0",           # 5.x has multiple RCE/parser CVEs
    "httpx>=0.27",                # older versions had input-validation CVEs
    "python-frontmatter>=1.1",
    "fastapi>=0.115,<0.137",      # older: CSRF/ReDoS CVEs. Cap <0.137: 0.137.1 regressed include_router (routes not added to app → routeless API). 0.136.x is the last good line. See #544.
    "uvicorn>=0.32",              # 0.11.x had log-injection / response-splitting CVEs
    "pydantic>=2.7,<3.0",         # 1.x and pre-2.4 had ReDoS / infinity-loop CVEs
    "mcp>=1.10",                  # earlier versions: DNS rebinding / FastMCP DoS / Streamable HTTP DoS CVEs
    "rich>=13.7",
    "click>=8.1",
    "jinja2>=3.1.5",              # provenance UI templating; 3.1.5 fixes sandbox-escape CVEs
    "markdown-it-py>=3.0",        # provenance UI: render memory bodies (html disabled)
    "nh3>=0.2.18",               # provenance UI: HTML sanitizer (ammonia); XSS backstop
]

[project.urls]
"Homepage" = "https://github.com/phasespace-labs/palinode"
"Documentation" = "https://github.com/phasespace-labs/palinode/tree/main/docs"
"Repository" = "https://github.com/phasespace-labs/palinode"
"Issues" = "https://github.com/phasespace-labs/palinode/issues"
"Changelog" = "https://github.com/phasespace-labs/palinode/blob/main/docs/CHANGELOG.md"
"Privacy" = "https://github.com/phasespace-labs/palinode/blob/main/PRIVACY.md"

[project.scripts]
palinode-watcher = "palinode.indexer.watcher:main"
palinode-api = "palinode.api.server:main"
palinode = "palinode.cli:main"
palinode-mcp = "palinode.mcp:main"
palinode-mcp-http = "palinode.mcp:main_http"
palinode-mcp-sse = "palinode.mcp:main_sse"  # deprecated alias for main_http

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-timeout"
]

[tool.bandit]
# Bandit static security analysis configuration. CI runs `bandit -r palinode/ -ll`
# (medium+ severity); these settings make local-invocation behavior match CI.
# All in-tree findings are triaged inline with `# nosec B<rule>: <rationale>` —
# do NOT add wholesale rule skips here without a specific justification.
exclude_dirs = ["tests", ".venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Exclude live tests from default runs (they need a running server)
addopts = "--ignore=tests/live"
pythonpath = ["."]
markers = [
    "slow: marks tests that need Ollama or take >5s",
]
asyncio_mode = "strict"
timeout = 60
timeout_method = "thread"

[tool.setuptools]
packages = [
    "palinode",
    "palinode.api",
    "palinode.api.routers",
    "palinode.api.ui",
    "palinode.cli",
    "palinode.consolidation",
    "palinode.core",
    "palinode.diagnostics",
    "palinode.diagnostics.checks",
    "palinode.import_",
    "palinode.indexer",
    "palinode.ingest",
    "palinode.lint",
    "palinode.migration",
]

[tool.setuptools.package-data]
# Ship the provenance UI's Jinja2 templates and static assets inside the wheel
# (offline-first — no CDN). Without this, an installed wheel has the UI Python
# but no templates/CSS and the router 500s at first render.
"palinode.api.ui" = ["templates/*.html", "static/*.css"]
